Removed commented-out code and formatted all source nicely.